@@ -18,6 +18,7 @@ v 8.12.0 (unreleased)
   - Make push events have equal vertical spacing.
   - API: Ensure invitees are not returned in Members API.
   - Preserve applied filters on issues search.
+  - Support for four Slack slash commands !6400
   - Add two-factor recovery endpoint to internal API !5510
   - Pass the "Remember me" value to the U2F authentication form
   - Display stages in valid order in stages dropdown on build page
